fix footer alignment (chaotic neutral -> lawful good)

--- a/web/app/css/main.css
+++ b/web/app/css/main.css
@@ -231,19 +231,23 @@ footer {
   width: 100%;
   background-color: var(--color-cd-dark-ish);
   color: var(--color-cd-light-ish);
-  padding: 2em;
+  padding: 2em 10%;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   margin-top: 2em;
 }
 
-footer div {
+footer > div {
   flex: 1 1 0 auto;
   height: 100%;
-  margin-left: 10%;
-  margin-right: 10%;
   /*background-color: rgb(74, 70, 64);*/
+}
+footer > div:not(:first-of-type) {
+  margin-left: 2em;
+}
+footer > div:not(:last-of-type) {
+  margin-right: 2em;
 }
 
 footer a {
